--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,13 +1,2 @@
-{% extends 'base.html.twig' %}
+{% extends '@EasyAdmin/page/content.html.twig' %}
 
-{% block body %}
-    <h1>Admin Page</h1>
-
-    <a href="{{ path('admin_new') }}" class="btn btn-primary mb-3">Add new car</a>
-
-    <table class="table">
-        <!-- Table content here -->
-    </table>
-
-    <!-- Pagination here -->
-{% endblock %}
