--- a/templates/car/index.html.twig
+++ b/templates/car/index.html.twig
@@ -24,10 +24,14 @@
 				</select>
 				<button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
 			</form>
-
-
+			<div class="ml-auto">
+				<a href="{{ path('admin') }}" class="btn btn-outline-light">Admin Board</a>
+			</div>
 		</div>
 	</nav>
+
+
+	<p>La température actuelle est : {{ currentTemperature }}°C</p>
 
 
 	<section class="py-5">
